# ucf-gatefinder

./: CMakeLists.txt  README.md  package.xml
src/: contour_search.cpp  contour_search.hpp  gate_search.cpp  gate_search.hpp  turtlebot_cmd_vel.cpp  turtlebot_drive.cpp
